// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GET /api/v1/products > respects 'limit' query parameter 1`] = `
[
  {
    "id": "000a5b36-a222-4e3f-9f77-0a2b42e5edf6",
    "name": "Tuna",
  },
  {
    "id": "0081090f-6706-4673-9f3a-681c5768dce7",
    "name": "Keyboard",
  },
  {
    "id": "00ae6b6b-c9b8-4f75-89ea-c55a9741d311",
    "name": "Gloves",
  },
  {
    "id": "00c2caeb-1ae1-4ecf-a8c3-4946bba7a05a",
    "name": "Fish",
  },
  {
    "id": "00c428cb-9d7a-47b1-8232-a0d735102232",
    "name": "Towels",
  },
  {
    "id": "00c58d67-d63e-44aa-b568-464579cfc6c0",
    "name": "Pants",
  },
  {
    "id": "00e966ec-736d-4431-b943-98c783c92398",
    "name": "Pizza",
  },
  {
    "id": "0172c5ec-d757-438c-8046-221d87e546c9",
    "name": "Salad",
  },
  {
    "id": "01749f2c-5465-4549-bb83-8f43c3f3cd18",
    "name": "Chair",
  },
  {
    "id": "01f2bd89-c8a3-4263-a9da-5b7b6902b881",
    "name": "Soap",
  },
]
`;

exports[`GET /api/v1/products > respects 'offset' query parameter 1`] = `
[
  {
    "id": "021a5204-6b64-4e99-9fb0-e67e094fdfed",
    "name": "Pants",
  },
  {
    "id": "02294725-d881-438d-8ace-6dd2a0991b6d",
    "name": "Table",
  },
  {
    "id": "02ee8863-f1b9-4469-9486-6d0ad18b1f3f",
    "name": "Bike",
  },
  {
    "id": "02f3702c-5c8e-42d3-a0ea-d3104fa44707",
    "name": "Chips",
  },
  {
    "id": "03004978-a61f-4a1c-8f20-688f77c1ffc7",
    "name": "Bacon",
  },
  {
    "id": "030e0f62-19d1-4e54-835e-687bf6472600",
    "name": "Chips",
  },
  {
    "id": "03212f7b-59b7-4154-b642-b9e37c84c3d3",
    "name": "Chicken",
  },
  {
    "id": "03425c14-86b3-4213-ac75-2beb47c78c96",
    "name": "Chicken",
  },
  {
    "id": "036f5c38-8664-4f69-b855-30a2e2aed6aa",
    "name": "Hat",
  },
  {
    "id": "038b1d18-7b51-4eb5-8fd3-0bfe03490cf2",
    "name": "Keyboard",
  },
  {
    "id": "03dfc338-397f-4ffa-b6d1-d32090fc157a",
    "name": "Towels",
  },
  {
    "id": "03f1a40c-0f3e-4c86-b88f-d8ec6fc03128",
    "name": "Chair",
  },
  {
    "id": "03f56831-f1d8-4ed8-87b2-8e8afabc986e",
    "name": "Gloves",
  },
  {
    "id": "04356ca7-0d8d-44f5-bd60-746411237b62",
    "name": "Chicken",
  },
  {
    "id": "0441d2c3-b808-4094-b373-e060459bebba",
    "name": "Chair",
  },
  {
    "id": "04c40ac2-b4ad-4825-94fd-e37724350ed8",
    "name": "Chicken",
  },
  {
    "id": "04e10d3a-62f1-47b3-92cb-96c33853758f",
    "name": "Shirt",
  },
  {
    "id": "04e54c82-f168-4a36-b3c8-873e484380b1",
    "name": "Table",
  },
  {
    "id": "04f8c512-caab-4ea7-808e-d5798d385d46",
    "name": "Pants",
  },
  {
    "id": "051b56e9-522b-4f0a-8a68-b0e52289b6f6",
    "name": "Keyboard",
  },
  {
    "id": "053876e3-9def-49c7-a65d-fd7354e5cb94",
    "name": "Table",
  },
  {
    "id": "05dfc2dd-f7cc-478c-ba1b-a928fc816742",
    "name": "Fish",
  },
  {
    "id": "06278aac-6134-44ba-87b3-f7bd633e88b6",
    "name": "Mouse",
  },
  {
    "id": "06451077-d19e-4a83-9d49-2ed14b8a2c19",
    "name": "Gloves",
  },
  {
    "id": "0659468c-e304-4d88-a49b-f8214c337f96",
    "name": "Fish",
  },
  {
    "id": "06d1263d-48e9-435c-82c9-e81f30be3e43",
    "name": "Car",
  },
  {
    "id": "06ef890a-54b4-475f-916f-56d385a3c4ac",
    "name": "Bike",
  },
  {
    "id": "072c5d26-dffa-4577-a403-383a66db6bb7",
    "name": "Tuna",
  },
  {
    "id": "07621c58-f4d7-4396-b564-c20a0711a961",
    "name": "Keyboard",
  },
  {
    "id": "0763b4fc-7b4f-4a02-83ed-cd221ee3f14b",
    "name": "Car",
  },
  {
    "id": "07888ec6-6183-4bfe-9965-9eb40ec16faf",
    "name": "Pants",
  },
  {
    "id": "0849e466-7c67-4b36-9584-12bc86f9dd56",
    "name": "Pants",
  },
  {
    "id": "08bb3aa9-e368-404e-8148-b35fdea24520",
    "name": "Shoes",
  },
  {
    "id": "08d03c53-bc11-4ca0-b3db-8be98a3b3171",
    "name": "Cheese",
  },
  {
    "id": "0936d9f1-2ba4-42d5-b7aa-6bac3eda887e",
    "name": "Pants",
  },
  {
    "id": "097fa30e-9af7-425b-a291-22030d83f5ae",
    "name": "Shoes",
  },
  {
    "id": "09d852b5-3b32-4c8c-97c3-c710e1673d90",
    "name": "Cheese",
  },
  {
    "id": "0a26c7cd-c981-4f06-9898-1d6bb33cfaa3",
    "name": "Hat",
  },
  {
    "id": "0a5a1742-e33c-4ca6-a95f-d560f937e24d",
    "name": "Table",
  },
  {
    "id": "0a77eceb-26d1-40f1-8ef2-631c7c0f0f87",
    "name": "Chips",
  },
  {
    "id": "0a91fe9d-9655-43b8-89e0-009c6692de7b",
    "name": "Pants",
  },
  {
    "id": "0ab355db-3391-42ce-a024-a534ce21c081",
    "name": "Computer",
  },
  {
    "id": "0ac1e04d-2ace-4b0c-8de0-0e8ecf818a93",
    "name": "Bike",
  },
  {
    "id": "0b3bd159-d868-440c-9c15-e66e5e309dfc",
    "name": "Sausages",
  },
  {
    "id": "0b7da549-b7ec-4409-a007-aa816beaf858",
    "name": "Chicken",
  },
  {
    "id": "0bf548f8-8f8f-41bf-80bc-8e1f206d5d83",
    "name": "Pizza",
  },
  {
    "id": "0c16661a-1d91-436a-97e8-d53213f3f658",
    "name": "Gloves",
  },
  {
    "id": "0c18516f-d78b-4e26-8212-72628fa50396",
    "name": "Hat",
  },
  {
    "id": "0c6632b4-391f-4df0-91c3-e91e8f7bc69d",
    "name": "Table",
  },
  {
    "id": "0c69e372-db13-444b-9a9f-78a5c0ed7aab",
    "name": "Keyboard",
  },
  {
    "id": "0cd14c59-7e81-4377-afe3-3881fc7de209",
    "name": "Ball",
  },
  {
    "id": "0d45eb4a-8b67-44ee-85cf-c18edc7f787e",
    "name": "Mouse",
  },
  {
    "id": "0d4721c1-7629-42dd-9787-8e71bf8c1418",
    "name": "Computer",
  },
  {
    "id": "0da80312-292c-4c61-bc2a-702bb97ee102",
    "name": "Tuna",
  },
  {
    "id": "0db365cd-bc77-4881-93a2-a6dc053aa684",
    "name": "Table",
  },
  {
    "id": "0defb4ca-1de6-429d-82cf-b7a738a81cdb",
    "name": "Salad",
  },
  {
    "id": "0e39c7e2-3ecb-4060-b465-2e23a3d6c657",
    "name": "Soap",
  },
  {
    "id": "0e8d668c-08f1-4014-9414-875663caef29",
    "name": "Car",
  },
  {
    "id": "0e917f50-fda0-44c8-ab1b-b55a292b0bc3",
    "name": "Fish",
  },
  {
    "id": "0e9b200c-e78a-41bd-b8fb-7a0a116ce723",
    "name": "Gloves",
  },
  {
    "id": "0ec7afed-bd80-4df4-848a-47f9390c5888",
    "name": "Soap",
  },
  {
    "id": "0edf3c8b-3ea9-4adc-bb8a-dfc088d81329",
    "name": "Bike",
  },
  {
    "id": "0fd8ac0f-482f-49e9-aa53-c304dae122f0",
    "name": "Sausages",
  },
  {
    "id": "105d3890-8162-4c6b-aeb6-8a0f657b7d03",
    "name": "Computer",
  },
  {
    "id": "10873e42-b006-4d67-a887-8ba8581a5820",
    "name": "Bacon",
  },
  {
    "id": "10ba9208-c782-4583-8bdc-cc80442d11b4",
    "name": "Bacon",
  },
  {
    "id": "10d318d3-5639-43e1-8d7c-c9acf2cdb462",
    "name": "Shirt",
  },
  {
    "id": "119167b8-e3c8-4db0-9340-8d6d364ffd45",
    "name": "Soap",
  },
  {
    "id": "11aa1bc7-4b86-4cec-9c74-f77b4848bd6a",
    "name": "Sausages",
  },
  {
    "id": "11b1401e-aac7-4241-8aea-6430f6e74431",
    "name": "Chair",
  },
  {
    "id": "1247725e-6219-409e-8910-44a5de59ac77",
    "name": "Shirt",
  },
  {
    "id": "125b0960-a668-4151-aa47-2af923c5949f",
    "name": "Bike",
  },
  {
    "id": "12b7a7ab-0344-4b17-8106-88deebef897f",
    "name": "Pizza",
  },
  {
    "id": "12e5047b-4c21-4ccb-b423-abcdc91faabd",
    "name": "Hat",
  },
  {
    "id": "13045d2f-713e-405b-8559-2bfc7395f712",
    "name": "Bike",
  },
  {
    "id": "1387271e-18ea-49e4-a511-8c2cc57fbd60",
    "name": "Computer",
  },
  {
    "id": "13e3b31c-d6a5-4be7-8490-6b96c636e74d",
    "name": "Hat",
  },
  {
    "id": "13ee6ac1-2bc7-44c0-b9c6-90a09c305502",
    "name": "Table",
  },
  {
    "id": "143da930-8b27-4a08-9af2-2184439b3de8",
    "name": "Pants",
  },
  {
    "id": "147cd1b8-3160-4b3e-a3e9-8960a0aafc7a",
    "name": "Shirt",
  },
  {
    "id": "14ff1874-97b1-4408-b163-1a1660070c0b",
    "name": "Pizza",
  },
  {
    "id": "1501beed-33ee-4881-91dc-79f80d513c02",
    "name": "Mouse",
  },
  {
    "id": "1568d473-1c47-4476-afa3-1d851f3e548f",
    "name": "Car",
  },
  {
    "id": "162d46a3-43a4-40e3-9c77-75728068efcf",
    "name": "Chicken",
  },
  {
    "id": "164356d6-e325-4bf9-8a99-85132d5c6801",
    "name": "Fish",
  },
  {
    "id": "164fb614-494d-4bb0-bb50-681a7f89f7d9",
    "name": "Cheese",
  },
  {
    "id": "167b83ef-df7b-4955-a383-1a8b473c555f",
    "name": "Sausages",
  },
  {
    "id": "1682ec8d-f364-4809-b5fd-bd9510351d82",
    "name": "Fish",
  },
  {
    "id": "16a3603a-4aee-4874-818d-65e23728ea33",
    "name": "Hat",
  },
  {
    "id": "16c2c7e0-99ea-4d16-8be6-407fde985ee7",
    "name": "Chips",
  },
  {
    "id": "17638f1e-db78-4359-8ecc-5cb860f8cd58",
    "name": "Fish",
  },
  {
    "id": "17a6e596-aa41-4b9e-9205-3ae8c315325b",
    "name": "Salad",
  },
  {
    "id": "17abe533-36c8-42dd-87a4-d5fca2edbe02",
    "name": "Soap",
  },
  {
    "id": "180c6807-27ec-4731-86e4-2179daf12eb9",
    "name": "Ball",
  },
  {
    "id": "181b5e61-333a-4022-9308-77bfc5a74f65",
    "name": "Shoes",
  },
  {
    "id": "18240365-5aa9-423c-8499-19ebd1cf7795",
    "name": "Towels",
  },
  {
    "id": "183857bb-9763-4b43-9d52-847bc03cd9d4",
    "name": "Shirt",
  },
  {
    "id": "1862065e-904f-43b1-a194-b8abf603a79f",
    "name": "Pizza",
  },
  {
    "id": "188ae63a-056f-43e4-a7ed-db5eeed1f58d",
    "name": "Shirt",
  },
  {
    "id": "18962ff1-c397-4c54-a7ca-2bc3de3df12b",
    "name": "Chicken",
  },
]
`;

exports[`GET /api/v1/products > returns status 200 1`] = `
[
  {
    "id": "000a5b36-a222-4e3f-9f77-0a2b42e5edf6",
    "name": "Tuna",
  },
  {
    "id": "0081090f-6706-4673-9f3a-681c5768dce7",
    "name": "Keyboard",
  },
  {
    "id": "00ae6b6b-c9b8-4f75-89ea-c55a9741d311",
    "name": "Gloves",
  },
  {
    "id": "00c2caeb-1ae1-4ecf-a8c3-4946bba7a05a",
    "name": "Fish",
  },
  {
    "id": "00c428cb-9d7a-47b1-8232-a0d735102232",
    "name": "Towels",
  },
  {
    "id": "00c58d67-d63e-44aa-b568-464579cfc6c0",
    "name": "Pants",
  },
  {
    "id": "00e966ec-736d-4431-b943-98c783c92398",
    "name": "Pizza",
  },
  {
    "id": "0172c5ec-d757-438c-8046-221d87e546c9",
    "name": "Salad",
  },
  {
    "id": "01749f2c-5465-4549-bb83-8f43c3f3cd18",
    "name": "Chair",
  },
  {
    "id": "01f2bd89-c8a3-4263-a9da-5b7b6902b881",
    "name": "Soap",
  },
  {
    "id": "021a5204-6b64-4e99-9fb0-e67e094fdfed",
    "name": "Pants",
  },
  {
    "id": "02294725-d881-438d-8ace-6dd2a0991b6d",
    "name": "Table",
  },
  {
    "id": "02ee8863-f1b9-4469-9486-6d0ad18b1f3f",
    "name": "Bike",
  },
  {
    "id": "02f3702c-5c8e-42d3-a0ea-d3104fa44707",
    "name": "Chips",
  },
  {
    "id": "03004978-a61f-4a1c-8f20-688f77c1ffc7",
    "name": "Bacon",
  },
  {
    "id": "030e0f62-19d1-4e54-835e-687bf6472600",
    "name": "Chips",
  },
  {
    "id": "03212f7b-59b7-4154-b642-b9e37c84c3d3",
    "name": "Chicken",
  },
  {
    "id": "03425c14-86b3-4213-ac75-2beb47c78c96",
    "name": "Chicken",
  },
  {
    "id": "036f5c38-8664-4f69-b855-30a2e2aed6aa",
    "name": "Hat",
  },
  {
    "id": "038b1d18-7b51-4eb5-8fd3-0bfe03490cf2",
    "name": "Keyboard",
  },
  {
    "id": "03dfc338-397f-4ffa-b6d1-d32090fc157a",
    "name": "Towels",
  },
  {
    "id": "03f1a40c-0f3e-4c86-b88f-d8ec6fc03128",
    "name": "Chair",
  },
  {
    "id": "03f56831-f1d8-4ed8-87b2-8e8afabc986e",
    "name": "Gloves",
  },
  {
    "id": "04356ca7-0d8d-44f5-bd60-746411237b62",
    "name": "Chicken",
  },
  {
    "id": "0441d2c3-b808-4094-b373-e060459bebba",
    "name": "Chair",
  },
  {
    "id": "04c40ac2-b4ad-4825-94fd-e37724350ed8",
    "name": "Chicken",
  },
  {
    "id": "04e10d3a-62f1-47b3-92cb-96c33853758f",
    "name": "Shirt",
  },
  {
    "id": "04e54c82-f168-4a36-b3c8-873e484380b1",
    "name": "Table",
  },
  {
    "id": "04f8c512-caab-4ea7-808e-d5798d385d46",
    "name": "Pants",
  },
  {
    "id": "051b56e9-522b-4f0a-8a68-b0e52289b6f6",
    "name": "Keyboard",
  },
  {
    "id": "053876e3-9def-49c7-a65d-fd7354e5cb94",
    "name": "Table",
  },
  {
    "id": "05dfc2dd-f7cc-478c-ba1b-a928fc816742",
    "name": "Fish",
  },
  {
    "id": "06278aac-6134-44ba-87b3-f7bd633e88b6",
    "name": "Mouse",
  },
  {
    "id": "06451077-d19e-4a83-9d49-2ed14b8a2c19",
    "name": "Gloves",
  },
  {
    "id": "0659468c-e304-4d88-a49b-f8214c337f96",
    "name": "Fish",
  },
  {
    "id": "06d1263d-48e9-435c-82c9-e81f30be3e43",
    "name": "Car",
  },
  {
    "id": "06ef890a-54b4-475f-916f-56d385a3c4ac",
    "name": "Bike",
  },
  {
    "id": "072c5d26-dffa-4577-a403-383a66db6bb7",
    "name": "Tuna",
  },
  {
    "id": "07621c58-f4d7-4396-b564-c20a0711a961",
    "name": "Keyboard",
  },
  {
    "id": "0763b4fc-7b4f-4a02-83ed-cd221ee3f14b",
    "name": "Car",
  },
  {
    "id": "07888ec6-6183-4bfe-9965-9eb40ec16faf",
    "name": "Pants",
  },
  {
    "id": "0849e466-7c67-4b36-9584-12bc86f9dd56",
    "name": "Pants",
  },
  {
    "id": "08bb3aa9-e368-404e-8148-b35fdea24520",
    "name": "Shoes",
  },
  {
    "id": "08d03c53-bc11-4ca0-b3db-8be98a3b3171",
    "name": "Cheese",
  },
  {
    "id": "0936d9f1-2ba4-42d5-b7aa-6bac3eda887e",
    "name": "Pants",
  },
  {
    "id": "097fa30e-9af7-425b-a291-22030d83f5ae",
    "name": "Shoes",
  },
  {
    "id": "09d852b5-3b32-4c8c-97c3-c710e1673d90",
    "name": "Cheese",
  },
  {
    "id": "0a26c7cd-c981-4f06-9898-1d6bb33cfaa3",
    "name": "Hat",
  },
  {
    "id": "0a5a1742-e33c-4ca6-a95f-d560f937e24d",
    "name": "Table",
  },
  {
    "id": "0a77eceb-26d1-40f1-8ef2-631c7c0f0f87",
    "name": "Chips",
  },
  {
    "id": "0a91fe9d-9655-43b8-89e0-009c6692de7b",
    "name": "Pants",
  },
  {
    "id": "0ab355db-3391-42ce-a024-a534ce21c081",
    "name": "Computer",
  },
  {
    "id": "0ac1e04d-2ace-4b0c-8de0-0e8ecf818a93",
    "name": "Bike",
  },
  {
    "id": "0b3bd159-d868-440c-9c15-e66e5e309dfc",
    "name": "Sausages",
  },
  {
    "id": "0b7da549-b7ec-4409-a007-aa816beaf858",
    "name": "Chicken",
  },
  {
    "id": "0bf548f8-8f8f-41bf-80bc-8e1f206d5d83",
    "name": "Pizza",
  },
  {
    "id": "0c16661a-1d91-436a-97e8-d53213f3f658",
    "name": "Gloves",
  },
  {
    "id": "0c18516f-d78b-4e26-8212-72628fa50396",
    "name": "Hat",
  },
  {
    "id": "0c6632b4-391f-4df0-91c3-e91e8f7bc69d",
    "name": "Table",
  },
  {
    "id": "0c69e372-db13-444b-9a9f-78a5c0ed7aab",
    "name": "Keyboard",
  },
  {
    "id": "0cd14c59-7e81-4377-afe3-3881fc7de209",
    "name": "Ball",
  },
  {
    "id": "0d45eb4a-8b67-44ee-85cf-c18edc7f787e",
    "name": "Mouse",
  },
  {
    "id": "0d4721c1-7629-42dd-9787-8e71bf8c1418",
    "name": "Computer",
  },
  {
    "id": "0da80312-292c-4c61-bc2a-702bb97ee102",
    "name": "Tuna",
  },
  {
    "id": "0db365cd-bc77-4881-93a2-a6dc053aa684",
    "name": "Table",
  },
  {
    "id": "0defb4ca-1de6-429d-82cf-b7a738a81cdb",
    "name": "Salad",
  },
  {
    "id": "0e39c7e2-3ecb-4060-b465-2e23a3d6c657",
    "name": "Soap",
  },
  {
    "id": "0e8d668c-08f1-4014-9414-875663caef29",
    "name": "Car",
  },
  {
    "id": "0e917f50-fda0-44c8-ab1b-b55a292b0bc3",
    "name": "Fish",
  },
  {
    "id": "0e9b200c-e78a-41bd-b8fb-7a0a116ce723",
    "name": "Gloves",
  },
  {
    "id": "0ec7afed-bd80-4df4-848a-47f9390c5888",
    "name": "Soap",
  },
  {
    "id": "0edf3c8b-3ea9-4adc-bb8a-dfc088d81329",
    "name": "Bike",
  },
  {
    "id": "0fd8ac0f-482f-49e9-aa53-c304dae122f0",
    "name": "Sausages",
  },
  {
    "id": "105d3890-8162-4c6b-aeb6-8a0f657b7d03",
    "name": "Computer",
  },
  {
    "id": "10873e42-b006-4d67-a887-8ba8581a5820",
    "name": "Bacon",
  },
  {
    "id": "10ba9208-c782-4583-8bdc-cc80442d11b4",
    "name": "Bacon",
  },
  {
    "id": "10d318d3-5639-43e1-8d7c-c9acf2cdb462",
    "name": "Shirt",
  },
  {
    "id": "119167b8-e3c8-4db0-9340-8d6d364ffd45",
    "name": "Soap",
  },
  {
    "id": "11aa1bc7-4b86-4cec-9c74-f77b4848bd6a",
    "name": "Sausages",
  },
  {
    "id": "11b1401e-aac7-4241-8aea-6430f6e74431",
    "name": "Chair",
  },
  {
    "id": "1247725e-6219-409e-8910-44a5de59ac77",
    "name": "Shirt",
  },
  {
    "id": "125b0960-a668-4151-aa47-2af923c5949f",
    "name": "Bike",
  },
  {
    "id": "12b7a7ab-0344-4b17-8106-88deebef897f",
    "name": "Pizza",
  },
  {
    "id": "12e5047b-4c21-4ccb-b423-abcdc91faabd",
    "name": "Hat",
  },
  {
    "id": "13045d2f-713e-405b-8559-2bfc7395f712",
    "name": "Bike",
  },
  {
    "id": "1387271e-18ea-49e4-a511-8c2cc57fbd60",
    "name": "Computer",
  },
  {
    "id": "13e3b31c-d6a5-4be7-8490-6b96c636e74d",
    "name": "Hat",
  },
  {
    "id": "13ee6ac1-2bc7-44c0-b9c6-90a09c305502",
    "name": "Table",
  },
  {
    "id": "143da930-8b27-4a08-9af2-2184439b3de8",
    "name": "Pants",
  },
  {
    "id": "147cd1b8-3160-4b3e-a3e9-8960a0aafc7a",
    "name": "Shirt",
  },
  {
    "id": "14ff1874-97b1-4408-b163-1a1660070c0b",
    "name": "Pizza",
  },
  {
    "id": "1501beed-33ee-4881-91dc-79f80d513c02",
    "name": "Mouse",
  },
  {
    "id": "1568d473-1c47-4476-afa3-1d851f3e548f",
    "name": "Car",
  },
  {
    "id": "162d46a3-43a4-40e3-9c77-75728068efcf",
    "name": "Chicken",
  },
  {
    "id": "164356d6-e325-4bf9-8a99-85132d5c6801",
    "name": "Fish",
  },
  {
    "id": "164fb614-494d-4bb0-bb50-681a7f89f7d9",
    "name": "Cheese",
  },
  {
    "id": "167b83ef-df7b-4955-a383-1a8b473c555f",
    "name": "Sausages",
  },
  {
    "id": "1682ec8d-f364-4809-b5fd-bd9510351d82",
    "name": "Fish",
  },
  {
    "id": "16a3603a-4aee-4874-818d-65e23728ea33",
    "name": "Hat",
  },
  {
    "id": "16c2c7e0-99ea-4d16-8be6-407fde985ee7",
    "name": "Chips",
  },
]
`;
